<resources>
    <string name="app_name">HealthCare</string>
    <string name="report_case">Report Case</string>
    <string name="defaulter_tracking">Defaulter Tracking</string>
    <string name="chat_room">Chat Room</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="took_medication">Took Medication</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disease_key">Disease</string>
    <string name="_0">0</string>
    <string name="sign_out">Sign Out</string>
    <string name="trimester">Trimester</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="fever">Fever</string>
    <string name="diarrhoea_image">Diarrhoea image</string>
    <string name="fever_image">Fever image</string>
    <string name="cough_image">Cough Image</string>
    <string name="cough">Cough</string>
    <string name="channel_name">notification disease channel</string>
    <string name="days">Days</string>
    <string name="external_storage_rationale">Permission is required to upload a picture.</string>
    <string name="uploaded_from_gallery">Uploaded from gallery</string>
    <string name="hint_name">Name</string>
    <string name="hint_id">Enter Id</string>
    <string name="attach_image">Attach Image</string>
    <string name="case_traced">Case traced</string>
    <string name="id_number">ID Number</string>
    <string name="symptoms">Symptoms</string>
    <string name="response">Response</string>
</resources>
