<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DiseasesActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/cough_image"
        android:padding="25dp"
        android:src="@drawable/cough" />

    <Button
        android:id="@+id/sick"
        android:layout_width="134dp"
        android:layout_height="29dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/button_rounded"
        android:onClick="cough"
        android:text="@string/cough"
        android:textColor="#fff"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/fever_image"
        android:padding="25dp"
        android:src="@drawable/fever" />

    <Button
        android:id="@+id/sick_one"
        android:layout_width="142dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/button_rounded"
        android:onClick="fever"
        android:text="@string/fever"
        android:textColor="#fff"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:contentDescription="@string/diarrhoea_image"
        android:padding="25dp"
        android:src="@drawable/diarrhea" />

    <Button
        android:id="@+id/community_leader"
        android:layout_width="146dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/button_rounded"
        android:onClick="diarrhoea"
        android:text="@string/diarrhoea"
        android:textColor="#fff"
        android:textSize="15sp" />


</LinearLayout>