<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DiseaseFragment">

    <TextView
        android:id="@+id/disease_statement_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Cough for how many days?" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:backgroundTint="#ffffff"
            android:minHeight="20dp"
            android:src="@drawable/ic_decrease" />

        <EditText
            android:id="@+id/days_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Days"
            android:inputType="number"
            android:minWidth="64dp"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/inc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:backgroundTint="#ffffff"
            android:minHeight="20dp"
            android:src="@drawable/ic_increase" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/took_medication"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/medication_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="?colorAccent"
        android:minWidth="100dp"
        android:onClick="submitResponse"
        android:text="@string/submit"
        android:textColor="#ffffff" />
</LinearLayout>